# BrownBeltCpp

./: .gitignore  README.md
Week1/AssociatedContainers/HashPerson/: CMakeLists.txt  hash_person.cpp
Week1/AssociatedContainers/HashPoint/: CMakeLists.txt  hash_point.cpp  test_runner.h
Week1/AssociatedContainers/HashSet/: CMakeLists.txt  hash_set.h  main.cpp
Week1/AssociatedContainers/SecondaryIndex/: CMakeLists.txt  database.h  secondary_index.cpp
Week1/AssociatedContainers/SetIteratorNext/: CMakeLists.txt  set_iterator_next.cpp
Week2/Namespaces/Ini/: CMakeLists.txt  ini.cpp  ini.h  test_ini.cpp  test_runner.h
Week2/Namespaces/Refactoring/: CMakeLists.txt  json.cpp  json.h  refactoring.cpp  xml.cpp  xml.h
Week2/Namespaces/Restructuring/: CMakeLists.txt  main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp
Week2/Namespaces/SpendingsJson/: CMakeLists.txt  json.cpp  json.h  spendings_json.cpp
Week2/Namespaces/SpendingsXml/: CMakeLists.txt  spendings_xml.cpp  xml.cpp  xml.h
Week2/This/Collide/: CMakeLists.txt  collide.cpp  game_object.h  geo2d.cpp  geo2d.h
Week2/This/CommentServer/: CMakeLists.txt  comment_server.cpp
Week3/Const/ConcurrentMap2/: CMakeLists.txt  concurrent_map_2.cpp  test_runner.h
Week3/Const/LazyValue/: CMakeLists.txt  lazy_value.cpp
Week3/Const/Polynomial/: CMakeLists.txt  polynomial.cpp
Week3/Const/PrintStats2/: CMakeLists.txt  main.cpp
Week3/Const/Synchronized2/: CMakeLists.txt  synchronized_2.cpp
Week3/UniquePtr/Pipeline/: CMakeLists.txt  pipeline.cpp  profile.h
Week3/UniquePtr/Zoo/: CMakeLists.txt  animals.h  zoo.cpp
Week4/RAII/Booking/: CMakeLists.txt  booking.h  new_booking_providers.h  new_trip_manager.h  old_booking_providers.h  old_trip_manager.h
Week4/RAII/UniquePtr/: CMakeLists.txt  main.cpp
Week4/SharedPtr/Cache/: CMakeLists.txt  Common.h  Solution.cpp  main.cpp
Week4/SharedPtr/Texture/: CMakeLists.txt  Common.h  Solution.cpp  Textures.cpp  main.cpp
Week5/Budget/: CMakeLists.txt  budget_manager.h  date.cpp  date.h  date_period.cpp  date_period.h  int_type.h  main.cpp  primitive_budget_manager.cpp  primitive_budget_manager.h  query.cpp  query.h  query_visitor.cpp  query_visitor.h  range.h  segm_tree_budget_manager.cpp  segm_tree_budget_manager.h  summing_segment_tree.h
Week5/BudgetLegacy/: CMakeLists.txt  main.cpp
Week5/Domains/: CMakeLists.txt  domains.cpp
Week5/TestDomains/: CMakeLists.txt  test_domains.cpp
Week6/Transport/: CMakeLists.txt  main.cpp
Week6/Transport/Libs/: graph.h  range.h  router.h
Week6/Transport/Libs/Json/: json.cpp  json.h
Week6/Transport/Request/: GetBusRequest.cpp  GetBusRequest.h  GetStopRequest.cpp  Request.cpp  Request.h
Week6/Transport/Request/Base/: AddBusRequest.cpp  AddBusRequest.h  AddStopRequest.cpp  AddStopRequest.h
Week6/Transport/Request/Stat/: GetStopRequest.h  RouteRequest.cpp  RouteRequest.h
Week6/Transport/RequestVisitor/: ComputeBaseRequestVisitor.cpp  ComputeStatRequestVisitor.cpp  ComputeStatRequestVisitor.h  ReadFromJsonRequestVisitor.cpp  ReadFromJsonRequestVisitor.h  RequestComputeBaseVisitor.cpp  RequestComputeBaseVisitor.h  RequestComputeStatVisitor.cpp  RequestComputeStatVisitor.h  RequestReadFromJsonVisitor.cpp  RequestReadFromJsonVisitor.h  RequestReadFromStreamVisitor.cpp  RequestReadFromStreamVisitor.h  RequestVisitor.h
Week6/Transport/RequestsReader/: JsonRequestsReader.cpp  RequestsJsonReader.cpp  RequestsJsonReader.h  RequestsReader.h  RequestsStreamReader.cpp  RequestsStreamReader.h
Week6/Transport/Response/: GetBusResponse.cpp  GetBusResponse.h  GetStopResponse.cpp  GetStopResponse.h  Response.h  RouteResponse.cpp  RouteResponse.h
Week6/Transport/ResponseVisitor/: ResponseVisitor.h  ResponseWriteToJsonVisitor.cpp  ResponseWriteToJsonVisitor.h  ResponseWriteToStreamVisitor.cpp  ResponseWriteToStreamVisitor.h  WriteToJsonResponseVisitor.cpp  WriteToJsonResponseVisitor.h
Week6/Transport/ResponseWriter/: JsonResponseWriter.cpp  ResponseWriter.h  ResponsesJsonWriter.cpp  ResponsesJsonWriter.h  ResponsesStreamWriter.cpp  ResponsesStreamWriter.h
Week6/Transport/RoutingSettings/: RoutingSettings.h
Week6/Transport/StopDistancesManager/: StopDistancesManager.cpp  StopDistancesManager.h
Week6/Transport/TransportDirectory/: TransportDirectory.cpp  TransportDirectory.h  TransportDirectoryBuilder.cpp  TransportDirectoryBuilder.h  TransportDirectoryRouteItems.cpp  TransportDirectoryRouteItems.h
